[package]
name = "pixel-peeker"
version = "0.3.5"
edition = "2024"
description = "A color eye dropper picker"
license = "EUPL-1.2"
repository = "https://github.com/kdheepak/pixel-peeker"
homepage = "https://github.com/kdheepak/pixel-peeker"
documentation = "https://github.com/kdheepak/pixel-peeker"
readme = "README.md"

[dependencies]
device_query = "4.0.1"
directories = "6.0.0"
iced = { version = "0.13.1", features = [
  "canvas",
  "image",
  "tokio",
  "web-colors",
] }
palette = "0.7.6"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
xcap = { version = "0.7.1", features = ["image"] }

[profile.release]
debug = "full"

[[bin]]
name = "pixel-peeker"
path = "src/main.rs"

[dev-dependencies]
pretty_assertions = "1.4.1"
